objects/Section_Standard__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Section/Standard</relationshipLabel>
        <relationshipName>Section_Standard</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <label>Standard</label>
        <referenceTo>Standard__c</referenceTo>
        <relationshipLabel>Section/Standard</relationshipLabel>
        <relationshipName>Section_Standard</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Section/Standard</label>
    <nameField>
        <displayFormat>Sec-Stand{0000}</displayFormat>
        <label>Section/Standard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section/Standard</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>